deps/src/cmake-3.13.4/Tests/RunCMake/CommandLine/cache-empty-entry-stderr.txt
^CMake Error: Parse error in cache file .*/Tests/RunCMake/CommandLine/cache-empty-entry/CMakeCache.txt on line 5. Offending entry:.*
